--- a/ChaiseMusicale/ChaiseMusicale/ChaiseMusicale.csproj
+++ b/ChaiseMusicale/ChaiseMusicale/ChaiseMusicale.csproj
@@ -11,6 +11,8 @@
     <AssemblyName>ChaiseMusicale</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
+    <ProductVersion>8.0.30703</ProductVersion>
+    <SchemaVersion>2.0</SchemaVersion>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -43,6 +45,10 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TableConfiguration.cs" />
+    <Compile Include="Request.cs" />
+    <Compile Include="Reservation.cs" />
+    <Compile Include="MonteCarloSimulation.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
