--- a/ChaiseMusicale/Project Restaurant/ProjectRestaurant/ProjectRestaurant.csproj
+++ b/ChaiseMusicale/Project Restaurant/ProjectRestaurant/ProjectRestaurant.csproj
@@ -33,11 +33,30 @@
     <Reference Include="System" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
-    <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Project Restaurant\Carre.cs" />
+    <Compile Include="Project Restaurant\CarreJumelable.cs" />
+    <Compile Include="Project Restaurant\Circulaire.cs" />
+    <Compile Include="Project Restaurant\Jumelable.cs" />
+    <Compile Include="Project Restaurant\Rectangulaire.cs" />
+    <Compile Include="Project Restaurant\RectangulaireJumelable.cs" />
+    <Compile Include="Project Restaurant\Restaurant.cs" />
+    <Compile Include="Project Restaurant\Table.cs" />
+    <Compile Include="Project Restaurant\XML.cs" />
+    <Compile Include="Project Restaurant\ProjectRestaurant\Program.cs" />
+    <Compile Include="Project Restaurant\ProjectRestaurant\Properties\AssemblyInfo.cs" />
+    <Compile Include="Project Restaurant\ProjectRestaurant\obj\x86\Debug\.NETFramework,Version=v4.5.AssemblyAttribute.cs" />
+    <Compile Include="Project Restaurant\Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <ItemGroup>
-    <Folder Include="ChaiseMusicale\" />
+    <Folder Include="Project Restaurant\" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Project Restaurant\.DS_Store" />
+    <None Include="Project Restaurant\ChaiseMusicale.userprefs" />
+    <None Include="Project Restaurant\ProjectRestaurant.sln" />
+    <None Include="Project Restaurant\ProjectRestaurant.userprefs" />
+    <None Include="Project Restaurant\ProjectRestaurant\ProjectRestaurant.csproj" />
+    <None Include="Project Restaurant\ProjectRestaurant\obj\x86\Debug\ProjectRestaurant.csproj.FilesWrittenAbsolute.txt" />
   </ItemGroup>
 </Project>
